ajout css moment quizz terminé

--- a/src/FrontBundle/Resources/views/Default/quiz.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quiz.html.twig
@@ -42,7 +42,7 @@
                     </div>
 
                 </section>
-                <section class="score" data-bind="visible: quizValidated() && !quizComplete()">
+                <section class="score FinQuizz" data-bind="visible: quizValidated() && !quizComplete()">
                     <h1>Le quiz est terminé</h1>
                     <button class="btn btn-primary" data-bind="click: getResults">Voir les résultats</button>
                 </section>
