--- a/web/css/quiz/jsQuizEngine.css
+++ b/web/css/quiz/jsQuizEngine.css
@@ -102,3 +102,11 @@
 .solutions .answer{
   font-size: 1em;
 }
+
+.FinQuizz{
+  width: 400px;
+  margin: auto;
+  margin-top: 200px;
+  position: relative;
+  text-align: center;
+}
