--- a/src/FrontBundle/Resources/views/Default/quiz.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quiz.html.twig
@@ -5,7 +5,7 @@
 
 
         <div id="jsQuizEngine" style="display: none;">
-            <div class="container-fluid">
+            <div class="container-fluid" style="margin-bottom: 70px;">
                 <section id="title" data-bind="visible: !quizStarted()">
                     <div class="jumbotron">
                         <h1 data-bind="text: quizTitle"></h1>
