--- a/src/FrontBundle/Resources/views/Default/article.html.twig
+++ b/src/FrontBundle/Resources/views/Default/article.html.twig
@@ -13,7 +13,7 @@
                 <div class="col-lg-6">
 
                     {% if article.image %}
-                    <img height="400px" src="{{ article.image }}" alt="photoDetailArticle" style="margin-right: auto;margin-left: auto">
+                    <img src="{{ asset("articles/img/" ~ article.image) }}" alt="photoDetailArticle" style="margin-right: auto;margin-left: auto;height:400px"/>
                     {% endif %}
                 </div>
             </div>
