Correction fautes orthographe (pas en BD bien surgit add .)

--- a/src/AdminBundle/Resources/views/Default/template.html.twig
+++ b/src/AdminBundle/Resources/views/Default/template.html.twig
@@ -48,7 +48,7 @@
                 <a class="lienText" href="{{ path('admin_home') }}"><h3>Accueil</h3></a>
                 <a class="lienText" href="{{ path('admin_articles') }}"><h3>Articles</h3></a>
                 <a class="lienText" href="{{ path('admin_quiz') }}"><h3>Quiz</h3></a>
-                <a class="lienText" href="{{ path('accueil') }}"><h3>Voir le Site</h3></a>
+                <a class="lienText" href="{{ path('accueil') }}"><h3>Retour au site</h3></a>
             </nav>
 
         </header>
