--- a/src/FrontBundle/Resources/views/Default/article.html.twig
+++ b/src/FrontBundle/Resources/views/Default/article.html.twig
@@ -27,7 +27,7 @@
             </div>
 
             <div class="row" style="margin-top: 10px;">
-                <p>Cet article vous a plû ? N'hésitez pas à aimer et commenter !</p>
+                <p>Cet article vous a plu ? N'hésitez pas à aimer et commenter !</p>
             </div>
 
             <div class="row" style="margin-bottom: 60px;">
