--- a/src/FrontBundle/Resources/views/Default/quizSession.html.twig
+++ b/src/FrontBundle/Resources/views/Default/quizSession.html.twig
@@ -34,7 +34,7 @@
         <div class="col-2">
         </div>
         <div class="col-4">
-            <h4>Sessions créés par vous</h4>
+            <h4>Sessions créées par vous</h4>
             <div id="accordion" role="tablist" style="overflow-y: auto;height:60vh;padding-right:15px;">
                 <div class="row">
 
