--- a/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
             <div class="card mb-1">
                 <div class="card-header">
                    <h5>
-                       Sessions Quizz créés
+                       Sessions de quiz créées
                    </h5> </div>
                 <div class="card-body">
                     <div id="chartContainer" style="height: 300px;width:100%;"></div>
@@ -18,28 +18,28 @@
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-primary o-hidden h-100">
                 <div class="card-body">
-                    <div class="mr-5">2 connexion en cours</div>
+                    <div class="mr-5">2 Connexion(s) en cours</div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-warning o-hidden h-100">
                 <div class="card-body">
-                    <div class="mr-5">50 Nouveaux Utilisateurs</div>
+                    <div class="mr-5">50 Nouveau(x) utilisateur(s)</div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-success o-hidden h-100">
                 <div class="card-body">
-                    <div class="mr-5">5 Certificas délivrés</div>
+                    <div class="mr-5">5 Certificat(s) délivré(s)</div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-sm-6 mb-3">
             <div class="card text-white bg-danger o-hidden h-100">
                 <div class="card-body">
-                    <div class="mr-5">13 Nouveaux Tickets!
+                    <div class="mr-5">13 Nouveau(x) ticket(s)!
                         <a class="" href="#">
                             <p>Voir le détail</p>
                         </a>
